--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
-div {
-  border: 1px solid grey;
-  margin: 5px;
+.floor-plan-div {
+  display: grid;
+  text-align: center;
   padding: 5px;
+  margin: 5px;
+}
+div {
+  border: 1px solid lightgray;
 }
 
 .living-room-div {
@@ -17,6 +21,7 @@ div {
 .kitchen-div {
   background-color: darkgoldenrod;
   color: white;
+  padding: 10px;
 }
 
 .oven-div {
